# ovis

./: Makefile.am  autogen.sh  configure.ac
docs/: Makefile.am  README.rst  conf.py  index.rst  ldms-quickstart.rst  requirements.txt
docs/asf/: asf-quickstart.rst  index.rst
docs/ldms_man/: index.rst
docs/man/: Plugin_jobid.rst  Plugin_store_app.rst  Plugin_store_csv.rst  Plugin_store_function_csv.rst  Plugin_store_kafka.rst  Plugin_store_papi.rst  Plugin_store_rabbitkw.rst  Plugin_store_rabbitv3.rst  Plugin_store_sos.rst  Plugin_testing.rst  Plugin_testing_jobid.rst  index.rst  ldms-contrib.rst  ldms-csv-anonymize.rst  ldms-csv-export-sos.rst  ldms-plugins.rst  ldms-reverse-conf.rst  ldms-run-static-tests.rst  ldms-static-test.rst  ldms-third-plugins.1  ldms.1  ldms_auth_munge.rst  ldms_auth_naive.rst  ldms_auth_none.rst  ldms_auth_ovis.rst  ldms_authentication.rst  ldms_build_install.rst  ldms_ls.rst  ldms_quickstart.rst  ldms_sampler_base.rst  ldmsctl.rst  ldmsd.1  ldmsd.rst  ldmsd_controller.rst  ldmsd_decomposition.rst  ldmsd_failover.rst  ldmsd_peer_daemon_advertisement.rst  ldmsd_qgroup.rst  ldmsd_sampler_advertisement.rst  ldmsd_setgroup.rst  (+3 more)
docs/man/contrib/: index.rst
docs/man/contrib/sampler/: index.rst
docs/man/contrib/store/: index.rst
docs/man/ldms/: index.rst  ldms-csv-anonymize.rst  ldms-csv-export-sos.rst  ldms_build_install.rst  ldms_quickstart.rst  ldms_sampler_base.rst  ldmsctl.rst  lsdate.rst
docs/man/ldms/auth/: index.rst
docs/man/ldms/man/: Plugin_jobid.rst  Plugin_store_app.rst  Plugin_store_csv.rst  Plugin_store_function_csv.rst  Plugin_store_kafka.rst  Plugin_store_papi.rst  Plugin_store_rabbitkw.rst  Plugin_store_rabbitv3.rst  Plugin_store_sos.rst  index.rst  ldms-csv-anonymize.rst  ldms-csv-export-sos.rst  ldms-plugins.rst  ldms-reverse-conf.rst  ldms-run-static-tests.rst  ldms-static-test.rst  ldms_auth_munge.rst  ldms_auth_naive.rst  ldms_auth_none.rst  ldms_auth_ovis.rst  ldms_authentication.rst  ldms_build_install.rst  ldms_ls.rst  ldms_quickstart.rst  ldms_sampler_base.rst  ldmsctl.rst  ldmsd.rst  ldmsd_controller.rst  ldmsd_decomposition.rst  ldmsd_failover.rst  ldmsd_peer_daemon_advertisement.rst  ldmsd_qgroup.rst  ldmsd_sampler_advertisement.rst  ldmsd_setgroup.rst  ldmsd_yaml_parser.rst  lsdate.rst  pll-ldms-static-test.rst
docs/man/ldms/test/: index.rst  ldms_csv_time_drops.rst  ldms_stream.rst
docs/man/ldmsd/: index.rst  ldmsd_decomposition.rst
docs/man/ldmsd/test/: aindex.rst  index.rst  ldmsd_stream_publish.rst  ldmsd_stream_subscribe.rst
docs/man/plugins/: index.rst
docs/man/plugins/sampler/: index.rst
docs/man/plugins/store/: index.rst
docs/man/sampler/: index.rst
docs/man/sampler/app_sampler/: Plugin_app_sampler.rst  Plugin_linux_proc_sampler.rst  aindex.rst  index.rst
docs/man/sampler/aries_mmr/: Plugin_aries_linkstatus.rst  Plugin_aries_mmr.rst  Plugin_aries_mmr_configurable.rst  aindex.rst  index.rst
docs/man/sampler/blob_stream/: Plugin_blob_stream_writer.rst  aindex.rst  index.rst  ldms-csv-from-blobs.rst
docs/man/sampler/clock/: Plugin_clock.rst  aindex.rst  index.rst
docs/man/sampler/coretemp/: Plugin_coretemp.rst  aindex.rst  index.rst
docs/man/sampler/cray_system_sampler/: Plugin_cray_dvs_sampler.rst  Plugin_cray_system_sampler_variants.rst  aindex.rst  index.rst
docs/man/sampler/dcgm_sampler/: Plugin_dcgm_sampler.rst  aindex.rst  index.rst
docs/man/sampler/dstat/: Plugin_dstat.rst  aindex.rst  index.rst  ldms_dstat_schema_name.rst
docs/man/sampler/examples/: index.rst
docs/man/sampler/filesingle/: Plugin_filesingle.rst  aindex.rst  index.rst  ldms-sensors-config.rst
docs/man/sampler/fptrans/: Plugin_fptrans.rst  aindex.rst  index.rst
docs/man/sampler/hello_stream/: Plugin_hello_sampler.rst  aindex.rst  index.rst
docs/man/sampler/hweventpapi/: Plugin_hweventpapi.rst  aindex.rst  index.rst
docs/man/sampler/ibmad_records_sampler/: Plugin_ibmad_records_sampler.rst  aindex.rst  index.rst
docs/man/sampler/ibmad_sampler/: Plugin_ibmad_sampler.rst  aindex.rst  index.rst
docs/man/sampler/ibnet/: Plugin_ibnet.rst  aindex.rst  index.rst  ldms-ibnet-sampler-gen.rst  ldms_ibnet_schema_name.rst
docs/man/sampler/json/: Plugin_json_stream_sampler.rst  aindex.rst  index.rst
docs/man/sampler/kgnilnd/: Plugin_kgnilnd.rst  aindex.rst  index.rst
docs/man/sampler/llnl/: Plugin_edac.rst  aindex.rst  index.rst
docs/man/sampler/lnet_stats/: Plugin_lnet_stats.rst  aindex.rst  index.rst
docs/man/sampler/loadavg/: Plugin_loadavg.rst  aindex.rst  index.rst
docs/man/sampler/lustre/: Plugin_lustre2_client.rst  aindex.rst  index.rst
docs/man/sampler/lustre_client/: Plugin_lustre_client.rst  aindex.rst  index.rst
docs/man/sampler/lustre_mdc/: Plugin_lustre_mdc.rst  aindex.rst  (+1 more)
docs/man/store/: index.rst
docs/man/third-plugins/: index.rst
docs/rst_man/: index.rst
docs/rst_man/man/: ldms-lsdate.rst  ldms-reverse-conf.rst  ldms_build_install.rst  ldms_csv_time_drops.rst  ldms_quickstart.rst  ldms_stream.rst  ldmsd-peer-daemon-advertisement.rst  ldmsd-yaml-parser.rst  ldmsd_controller.rst  ldmsd_qgroup.rst  ldmsd_sampler_advertisement.rst  ldmsd_yaml_parser.rst
docs/rst_man/scripts/: ldms-csv-anonymize.rst  ldms-csv-export-sos.rst  ldms-static-test.rst  pll-ldms-static-test.rst
docs/store_man/: Plugin_darshan_stream_store.rst
docs/streams/: ldms-streams-apps.rst
ldms/man/: Makefile.am  Plugin_store_app.man  Plugin_testing_jobid.man  ldms-lsdate.rst  ldms-plugins.rst  ldms_authentication.rst  ldms_build_install.rst  ldms_quickstart.rst  ldms_stream.rst  ldmsd-controller.rst  ldmsd-yaml-parser.rst  ldmsd_controller.man  ldmsd_qgroup.rst  ldmsd_sampler_advertisement.rst  pll-ldms-static-test.man
(+763 files in other folders)
